Supabase/supabase_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: supabase
  template:
    metadata:
      labels:
        app: supabase
    spec:
      containers:
        - name: postgrest
          image: supabase/postgrest:v0.5.2
          ports:
            - containerPort: 3000
        - name: gotrue
          image: supabase/gotrue:v1.10.0
          ports:
            - containerPort: 9999
        - name: storage
          image: supabase/storage-api:v0.8.1
          ports:
            - containerPort: 9000
        - name: kong
          image: supabase/kong:v2.5.1
          ports:
            - containerPort: 8000
            - containerPort: 8443
