Supabase/ingress-rules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: supabase-ingress
spec:
  rules:
    - host: <domain>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: supabase
                port:
                  number: 3000
